# prompt-generator-agent

./: .env.example  .gitignore  ChangeLog.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: api.md  setup.md  testing.md  usage.md
output/: README.md
src/: cli.py  ui.py
src/agent/: orchestrator.py  prompt_generator.py  prompt_reviewer.py  test_case_generator.py
src/agent/memory/: building_custom_gpt.md  memory_manager.py  prompt_engineering_notes.md
src/agent/prompts/: generator.md  reviewer.md  test_case_generator.md
src/config/: settings.py
src/core/: exceptions.py  provider_factory.py
src/core/providers/: litellm.py  ollama.py  openai_sdk.py
src/core/utils/: exporter.py  logger.py
src/interfaces/: base_agent.py  base_provider.py
tests/: test_agents.py  test_exporter.py  test_memory_loading_verification.py  test_providers.py
